--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.infra.dependencies]
-# bhub-cdk = "0.23.4"
+bhub-cdk = "0.23.4"
 
 [[tool.poetry.source]]
 name = "bhub"
